[package]
name = "polkadot-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polkadot-metadata = { path = "../polkadot-metadata" }
kusama-metadata = { path = "../kusama-metadata" }
rococo-metadata = { path = "../rococo-metadata" }
westend-metadata = { path = "../westend-metadata" }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
subxt = "0.31.0"
clap = { version = "4.3.19", features = ["derive"] }
hybrid-indexer = "0.1.1"
