[package]
name = "acuity-index-polkadot"
version = "0.2.2"
edition.workspace = true

[dependencies]
polkadot-metadata = { workspace = true }
kusama-metadata = { workspace = true }
westend-metadata = { workspace = true }
paseo-metadata = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
subxt = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex-literal = { workspace = true }
clap-verbosity-flag = { workspace = true }
sled = { workspace = true, default-features = false }
byte-unit = { workspace = true }
serde = { workspace = true, features = ["derive"] }
zerocopy = { workspace = true }
tracing-log = { workspace = true }
acuity-index-substrate = { workspace = true }
